<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="today"
            type="tech.abed_murad.ahoytask.local.model.ForecastResponse.DayWeather" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF6FA"
        tools:context=".DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dateDayTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                tools:text="21 Feb"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />


            <TextView
                android:id="@+id/weatherDescriptionTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:padding="4dp"
                android:text="@{today.weather.get(0).description}"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateDayTV"
                tools:text="Sky is Clear" />


            <ImageView
                android:id="@+id/weatherIconIV"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002"
                app:srcCompat="@mipmap/ic_clear" />

            <TextView
                android:id="@+id/currentTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text='@{String.valueOf(today.temp.day) + "°"}'
                android:textSize="46sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherDescriptionTV"
                tools:text="26.25°" />


            <TextView
                android:id="@+id/maxTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="5"
                android:gravity="center_horizontal|bottom"
                android:text='@{String.valueOf(today.temp.max) + "°"}'
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                app:layout_constraintStart_toEndOf="@+id/currentTempTV"
                app:layout_constraintTop_toTopOf="@+id/currentTempTV"
                tools:text="35°" />

            <TextView
                android:id="@+id/minTempTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="5"
                android:gravity="center_horizontal|end"
                android:text='@{String.valueOf(today.temp.min) + "°"}'
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/currentTempTV"
                app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                app:layout_constraintStart_toEndOf="@+id/currentTempTV"
                app:layout_constraintTop_toBottomOf="@+id/maxTempTV"
                tools:ignore="RtlSymmetry"
                tools:text="21°" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/importantDataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout">

            <LinearLayout
                android:id="@+id/firstLineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/ic_humidity" />

                    <TextView
                        android:id="@+id/humidityTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text='@{String.valueOf(today.temp.day) + "%"}'
                        tools:text="95.5%"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/ic_air" />

                    <TextView
                        android:id="@+id/windTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text='@{String.valueOf(today.speed) + " m/s"}'
                        tools:text="3.14 m/s"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cloudiness"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/ic_cloud" />

                    <TextView
                        android:id="@+id/cloudinessTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text='@{String.valueOf(today.clouds) + "%"}'
                        tools:text="10%"
                        android:textSize="18sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondLineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/firstLineLayout"
                tools:layout_editor_absoluteX="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/ic_pressure" />

                    <TextView
                        android:id="@+id/pressureTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text='@{String.valueOf(today.pressure) + " hpa"}'
                        tools:text="1006.10 Pda"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/ic_sunrise" />

                    <TextView
                        android:id="@+id/sunriseTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        tools:text="95.5%"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/ic_sunset" />

                    <TextView
                        android:id="@+id/sunsetTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        tools:text="3.14 m/s"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>