<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="tech.abed_murad.ahoytask.viewmodel.MainFragmentViewModel" />

        <variable
            name="today"
            type="tech.abed_murad.ahoytask.local.model.TodayResponse" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainFragment">


            <androidx.cardview.widget.CardView
                android:id="@+id/detailWeatherCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/headerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#80DEEA"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/cityNameTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@{today.name}"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="London" />


                    <TextView
                        android:id="@+id/weatherDescriptionTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:padding="4dp"
                        android:text="@{today.weather.get(0).description}"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cityNameTV"
                        tools:text="Sky is Clear" />


                    <ImageView
                        android:id="@+id/weatherIconIV"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.060000002"
                        app:srcCompat="@mipmap/ic_clear"
                        tools:srcCompat="@mipmap/ic_clear" />

                    <TextView
                        android:id="@+id/currentTempTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text='@{String.valueOf(today.main.temp) + "°"}'
                        android:textSize="46sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/weatherDescriptionTV"
                        tools:text="26.25°" />


                    <TextView
                        android:id="@+id/maxTempTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="5"
                        android:gravity="center_horizontal|bottom"
                        android:text='@{String.valueOf(today.main.tempMax) + "°"}'
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                        app:layout_constraintStart_toEndOf="@+id/currentTempTV"
                        app:layout_constraintTop_toTopOf="@+id/currentTempTV"
                        tools:text="35°" />

                    <TextView
                        android:id="@+id/minTempTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="5"
                        android:gravity="center_horizontal|end"
                        android:text='@{String.valueOf(today.main.tempMin) + "°"}'
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/currentTempTV"
                        app:layout_constraintEnd_toStartOf="@+id/weatherIconIV"
                        app:layout_constraintStart_toEndOf="@+id/currentTempTV"
                        app:layout_constraintTop_toBottomOf="@+id/maxTempTV"
                        tools:ignore="RtlSymmetry"
                        tools:text="21°" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/todayDataCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="1dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailWeatherCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="16dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textColor="@color/colorPrimary" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                app:srcCompat="@drawable/ic_humidity" />

                            <TextView
                                android:id="@+id/humidityTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text='@{String.valueOf(today.main.humidity) + "%"}'
                                android:textSize="18sp"
                                tools:text="95.5%" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="25"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textColor="@color/colorPrimary" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                app:srcCompat="@drawable/ic_air" />

                            <TextView
                                android:id="@+id/windTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text='@{String.valueOf(today.wind.speed) + " m/s"}'
                                android:textSize="18sp"
                                tools:text="3.14 m/s" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="25"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cloudiness"
                                android:textColor="@color/colorPrimary" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                app:srcCompat="@drawable/ic_cloud" />

                            <TextView
                                android:id="@+id/cloudinessTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text='@{String.valueOf(today.clouds.all) + "%"}'
                                android:textSize="18sp"
                                tools:text="10%" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure"
                                android:textColor="@color/colorPrimary" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                app:srcCompat="@drawable/ic_pressure" />

                            <TextView
                                android:id="@+id/pressureTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:text='@{String.valueOf(today.main.pressure) + " hpa"}'
                                android:textSize="18sp"
                                tools:text="1006.10 hPa" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forecastTitleTV"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/label_forecast"
                android:textColor="#5C5959"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayDataCard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecastTitleTV"
                tools:listitem="@layout/item_weather_forecast" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecastTitleTV"
                tools:listitem="@layout/item_weather_forecast" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>